<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/title_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_daynight"
        android:icon="@drawable/ic_daynight"
        android:title="@string/title_daynight"
        app:showAsAction="ifRoom" />
</menu>