...
    <string name="title_notify">Notification</string>

    <!-- TODO: Extra keys -->
    <string name="match_key">MATCH_EXTRA</string>

    <!-- TODO: Preferences keys -->
    <string name="theme_key">dark_mode</string>

    <!-- TODO: WorkerManager keys -->
    <string name="worker_tag_key">WORKER_TAG</string>
    <string name="teams_name_key">TEAMS_NAME</string>
    <string name="league_name_key">LEAGUE_NAME</string>

...
